# data_tamer

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  conanfile.py  data_tamer_logo.xcf
.github/workflows/: cmake_ubuntu.yml  ros2.yml
data_tamer/: CHANGELOG.rst  CMakeLists.txt  conanfile.py  data_tamerConfig.cmake.in  package.xml
data_tamer/benchmarks/: data_tamer_benchmark.cpp
data_tamer/examples/: CMakeLists.txt  custom_types.cpp  example.cpp  geometry_types.hpp  mcap_1m_per_sec.cpp  mcap_reader.cpp  mcap_writer_sample.cpp  raii.cpp  ros2_publisher.cpp
data_tamer/include/data_tamer/: channel.hpp  custom_types.hpp  data_sink.hpp  data_tamer.hpp  types.hpp  values.hpp
data_tamer/include/data_tamer/contrib/: SerializeMe.hpp
data_tamer/include/data_tamer/details/: locked_reference.hpp  mutex.hpp
data_tamer/include/data_tamer/sinks/: dummy_sink.hpp  mcap_sink.hpp  ros2_publisher_sink.hpp
data_tamer/include/data_tamer_parser/: data_tamer_parser.hpp
data_tamer/src/: channel.cpp  data_sink.cpp  data_sync.cpp  data_tamer.cpp  types.cpp  values.cpp
data_tamer/src/sinks/: mcap_sink.cpp  ros2_publisher_sink.cpp
data_tamer/tests/: CMakeLists.txt  custom_types_tests.cpp  dt_tests.cpp  parser_tests.cpp
data_tamer_cpp/: .clang-format  CHANGELOG.rst  CMakeLists.txt  conanfile.py  data_tamerConfig.cmake.in  package.xml
data_tamer_cpp/benchmarks/: CMakeLists.txt  data_tamer_benchmark.cpp
data_tamer_cpp/examples/: CMakeLists.txt  T01_basic_example.cpp  T02_custom_types.cpp  T03_mcap_writer.cpp  custom_types.cpp  geometry_types.hpp  mcap_1m_per_sec.cpp  mcap_reader.cpp  mcap_writer_sample.cpp  ros2_publisher.cpp
data_tamer_cpp/include/data_tamer/: buffered_sink.hpp  channel.hpp  custom_types.hpp  data_sink.hpp  data_tamer.hpp  logged_value.hpp  types.hpp  values.hpp
data_tamer_cpp/include/data_tamer/contrib/: SerializeMe.hpp
data_tamer_cpp/include/data_tamer/details/: locked_reference.hpp  mutex.hpp
data_tamer_cpp/include/data_tamer/sinks/: dummy_sink.hpp  mcap_sink.hpp  ros2_publisher_sink.hpp
data_tamer_cpp/include/data_tamer_parser/: data_tamer_parser.hpp
data_tamer_cpp/src/: channel.cpp  data_sink.cpp  data_tamer.cpp  types.cpp
data_tamer_cpp/src/sinks/: mcap_sink.cpp  ros2_publisher_sink.cpp
data_tamer_cpp/tests/: CMakeLists.txt  custom_types_tests.cpp  dt_tests.cpp  parser_tests.cpp  trait_tests.cpp
data_tamer_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
data_tamer_msgs/msg/: Schema.msg  SchemaField.msg  Schemas.msg  Snapshot.msg
examples/: CMakeLists.txt  custom_types.cpp  example.cpp  mcap_1m_per_sec.cpp
include/data_tamer/: channel.hpp  data_sink.hpp  data_tamer.hpp  dictionary.hpp  types.hpp  values.hpp
include/data_tamer/sinks/: dummy_sink.hpp  mcap_sink.hpp
src/: channel.cpp  data_sync.cpp  data_tamer.cpp  types.cpp  values.cpp
src/sinks/: mcap_sink.cpp
tests/: CMakeLists.txt  dt_tests.cpp
