<?xml version="1.0"?>
<package format="3">
  <name>data_tamer_cpp</name>
  <version>0.9.4</version>
  <description>
  DataTamer data logging library
  </description>

  <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>

  <license>MIT</license>

  <author>Davide Faconti</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>mcap_vendor</depend>
  <depend>data_tamer_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>

</package>
